# Vodafone-AIDA-Google-Hackathon-25

./: DEPLOYMENT_GUIDE.md  Dockerfile  Makefile  README.md  SETUP_DEPENDENCIES.md  deploy.sh  deploy_agent.py  pyproject.toml
.ipynb_checkpoints/: functions-checkpoint.py
Platform/: README.md
backend/: INGESTION_AGENT_FIXES.md  QUICK_START.md  README.md  deploy_agent.py  deployment_config.py  env.sh  example_usage.py  requirements.txt  test_agent_instantiation.py  test_complete_system.py  test_deployment_connection.py  test_imports.py  test_ingestion.py  test_minimal_agent.py  test_setup.py  test_tools.py
backend/deployment/: deploy.py
backend/network-incident/: env.sh  pyproject.toml
backend/network-incident/network_incident/.ipynb_checkpoints/: prompt-checkpoint.py
backend/network_incident/: README.md  agent.py  inference.py  retrieval.py
backend/network_incident/.ipynb_checkpoints/: agent-checkpoint.py
backend/network_incident/sub_agents/incident_ingestion/: agent.py  file_handler.py  ingestion.py  prompt.py  use_case_2_network_incident_logs.xlsx
backend/network_incident/sub_agents/resolution_suggestion/: __init__.py  agent.py  prompt.py  retrieval_tool.py
backend/network_incident/sub_agents/uploader/: __init__.py  agent.py
config/: configs.py
config/.ipynb_checkpoints/: configs-checkpoint.py
configs/: config.py
deployment/: deploy.py  simple_test.py  test_deployment.py
frontend/: __init__.py  agent_client.py  app.py
frontend/.ipynb_checkpoints/: app-checkpoint.py  inference_client-checkpoint.py
(+8 files in other folders)
